--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -1,3 +1,4 @@
+---
 name: docker-image-build-action
 
 on:
@@ -5,91 +6,68 @@ on:
         tags:
             - '*.*.*'
     pull_request:
+    workflow_dispatch:
+env:
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-    docker:
+    push_to_registry:
+        name: Push Docker image to Docker Hub
         runs-on: ubuntu-latest
+        permissions:
+            packages: write
+            contents: read
+            attestations: write
+            id-token: write
+
         steps:
-            -   name: Checkout
-                uses: actions/checkout@v2
-            -   name: setup java
-                uses: actions/setup-java@v1
-                with:
-                    java-version: '11'
-                    java-package: jdk
-                    architecture: x64
-            -   name: Run build plantuml script
-                run: ./build_plantuml.sh
-                shell: bash
-            -   name: Prepare for docker build
-                id: prep
-                run: |
-                    DOCKER_IMAGE=${{ github.repository }}
-                    VERSION=noop
-                    if [ "${{ github.event_name }}" = "schedule" ]; then
-                      VERSION=nightly
-                    elif [[ $GITHUB_REF == refs/tags/* ]]; then
-                      VERSION=${GITHUB_REF#refs/tags/}
-                    elif [[ $GITHUB_REF == refs/heads/* ]]; then
-                      VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-                      if [ "${{ github.event.repository.default_branch }}" = "$VERSION" ]; then
-                        VERSION=edge
-                      fi
-                    elif [[ $GITHUB_REF == refs/pull/* ]]; then
-                      VERSION=pr-${{ github.event.number }}
-                    fi
-                    TAGS="${DOCKER_IMAGE}:${VERSION}"
-                    LOCAL_VERSION="${DOCKER_IMAGE}:${VERSION}"
-                    if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-                      MINOR=${VERSION%.*}
-                      MAJOR=${MINOR%.*}
-                      TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
-                    elif [ "${{ github.event_name }}" = "push" ]; then
-                      TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
-                    fi
-                    echo ::set-output name=local_version::${LOCAL_VERSION}
-                    echo ::set-output name=version::${VERSION}
-                    echo ::set-output name=tags::${TAGS}
-                    echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-            -   name: Set up QEMU
-                uses: docker/setup-qemu-action@v1
-            -   name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v1
-            -   name: Login to DockerHub
-                if: github.event_name != 'pull_request'
-                uses: docker/login-action@v1
-                with:
-                    username: ${{ secrets.DOCKERHUB_USERNAME }}
-                    password: ${{ secrets.DOCKERHUB_TOKEN }}
-            -   name: Build and push
-                id: docker_build
-                uses: docker/build-push-action@v2
-                with:
-                    context: .
-                    file: ./Dockerfile
-                    platforms: linux/amd64
-                    push: ${{ github.event_name != 'pull_request' }}
-                    tags: ${{ steps.prep.outputs.tags }}
-                    labels: |
-                        org.opencontainers.image.title=${{ github.event.repository.name }}
-                        org.opencontainers.image.description=${{ github.event.repository.description }}
-                        org.opencontainers.image.url=${{ github.event.repository.html_url }}
-                        org.opencontainers.image.source=${{ github.event.repository.clone_url }}
-                        org.opencontainers.image.version=${{ steps.prep.outputs.version }}
-                        org.opencontainers.image.created=${{ steps.prep.outputs.created }}
-                        org.opencontainers.image.revision=${{ github.sha }}
-                        org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
-            -   name: Image digest
-                run: echo ${{ steps.docker_build.outputs.digest }}
-#            -   name: Test the pdf converter
-#                run: |
-#                    set -eu
-#                    mkdir -p build && chmod 777 build
-#                    mkdir -p build/site && chmod 777 build/site
-#                    MDDOC_DOCKER_IMAGE="${{ steps.prep.outputs.local_version }}" ./convert2pdf -d docs -b build -o build/mddoc_test_doc.pdf -f mddoc.yml -s site
-#                shell: bash
-#            -   name: Archive production artifacts
-#                uses: actions/upload-artifact@v2
-#                with:
-#                    name: mddoc_test_doc.pdf
-#                    path: build/mddoc_test_doc.pdf
+            - name: Check out the repo
+              uses: actions/checkout@v4
+              with:
+                fetch-depth: 1
+
+            - name: Log in to Docker Hub
+              uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+              with:
+                registry: ${{ env.REGISTRY }}
+                username: ${{ github.actor }}
+                password: ${{ secrets.GITHUB_TOKEN }}
+
+            - id: docker_image_metadata
+              name: Extract metadata (tags, labels) for Docker
+              uses: docker/metadata-action@v4
+              with:
+                  images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+            - id: setup-buildx
+              name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - id: docker_image_build_push_to_ghcr
+              name: Build app, build docker image and Push image to ghcr.io
+              uses: docker/build-push-action@v5
+              with:
+                  context: .
+                  file: ./Dockerfile
+                  push: ${{ github.event_name != 'pull_request' }}
+                  tags: ${{ steps.docker_image_metadata.outputs.tags }}
+                  labels: ${{ steps.docker_image_metadata.outputs.labels }}
+                  cache-from: type=gha
+                  cache-to: type=gha,mode=max
+                  build-args: |
+                      VERSION=${{ github.ref_name }}
+                      COMMIT_SHA=${{ github.sha }}
+
+            - id: docker_image_digest
+              name: Show Docker Image digest
+              run: echo ${{ steps.docker_image_build_push_to_ghcr.outputs.digest }}
+
+            - name: Generate artifact attestation
+              uses: actions/attest-build-provenance@v2
+              with:
+                  subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+                  subject-digest: ${{ steps.docker_image_build_push_to_ghcr.outputs.digest }}
+                  push-to-registry: false
+
+
